--- a/Reto-2/styles.css
+++ b/Reto-2/styles.css
@@ -39,6 +39,18 @@ body {
   margin: 0 0 15px 0;
 }
 
+@keyframes pulse {
+  0% {transform: scale(1);}
+  50% {transform: scale(1.3);}
+  100% {transform: scale(1);}
+}
+.pulse {
+  animation-name: pulse;
+  animation-duration: 1.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+}
+
 .not-found p {
   margin : 0;
   font-size: 20px;
